--- a/build.gradle
+++ b/build.gradle
@@ -30,15 +30,16 @@ dependencies {
 	compile gradleApi()
 	compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
 	testCompile 'junit:junit:4.11'
-	testCompile 'org.spockframework:spock-core:0.6-groovy-1.8'
+	testCompile 'org.spockframework:spock-core:0.7-groovy-1.8'
 }
 
-install.dependsOn build
+install.dependsOn check
 
 uploadArchives {
-	dependsOn build
+	dependsOn check
 	repositories {
 		mavenDeployer {
+			// TODO add bintray
 		}
 	}
 }
