--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,10 @@ dependencies {
 	testCompile 'org.spockframework:spock-core:0.7-groovy-1.8'
 }
 
+task wrapper(type: Wrapper) {
+	gradleVersion = '1.6'
+}
+
 install.dependsOn check
 
 uploadArchives {
